Last activity column

--- a/client/src/javascript/i18n/strings/en.json
+++ b/client/src/javascript/i18n/strings/en.json
@@ -283,6 +283,7 @@
   "torrents.details.general.connected": "{connected} connected of {total}",
   "torrents.details.general.date.active": "Last Activity",
   "torrents.details.general.date.active.now": "Now",
+  "torrents.details.general.date.active.unknown": "Unknown",
   "torrents.details.general.date.added": "Added",
   "torrents.details.general.date.created": "Created",
   "torrents.details.general.date.finished": "Finished",
@@ -348,6 +349,7 @@
   "torrents.properties.date.added": "Added",
   "torrents.properties.date.created": "Created",
   "torrents.properties.date.finished": "Finished",
+  "torrents.properties.date.active": "Last Activity",
   "torrents.properties.directory": "Location",
   "torrents.properties.download.speed": "Download Speed",
   "torrents.properties.download.total": "Downloaded",
